# CPQD-Blockchain-S15

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  Makefile  README.md  build.sh  install-sgx-sdk.sh  meson.build  meson.options  setup-sgx.sh
.github/workflows/: challenge.yaml  test.yaml
app/: app.c  app.h  defines.h  error.c  error.h  meson.build
app/challenge/: challenge_1.c  challenge_2.c  challenge_3.c  challenge_4.c  challenge_5.c  challenges.h
docs/: description.md  descrição.md  enclave-atividade.edl  enclave-desafio-5.edl  probabilities.py
enclave/: enclave.c  enclave.config.xml  enclave.edl  enclave.h  meson.build
enclave/challenge/: challenge_1.c  challenge_2.c  challenge_3.c  challenge_4.c  challenge_5.c
enclave/desafio/: enclave_desafio.edl  meson.build
include/: defines.h
scripts/: seed.py
