option('sgx_sdk',
    type: 'string',
    value: '/opt/intel/sgxsdk',
    description: 'Path to SGX SDK root.',
)

option('sgx_mode',
    type: 'combo',
    choices: ['hw', 'sim', 'auto'],
    value: 'auto',
    description: 'Select between hardware SGX or simulated SGX. Use \'auto\' for hardware detection during build.',
)

option('student_name',
    type: 'string',
    value: 'Tiago de Paula Alves',
    description: 'Name of the student to be matched. Will be titlecased.',
)

option('enclave_seed',
    type: 'integer',
    min: -1,
    value: -1,
    description: 'Seed used for all challenges. Use -1 for random.',
)
